--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,6 +148,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
     // Paging
+    // Ref : https://proandroiddev.com/infinite-lists-with-paging-3-in-jetpack-compose-b095533aefe6
+    // Ref : https://github.com/2307vivek/PagingCompose-Sample
     implementation "androidx.paging:paging-runtime-ktx:3.0.0-rc01"
 
 
