--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,17 @@ buildscript {
         //ComposeOptions.kotlinCompilerVersion is deprecated. Compose now uses the kotlin compiler defined in your buildscript.
 //        android_compose_appcompat_version = '1.3.0-beta01'
 //        android_compose_activity_version = '1.3.0-alpha02' // 1.3.0-alpha04 1.3.0-alpha05 1.3.0-alpha07
-        compose_version = '1.0.0-beta05'//1.0.0-beta03 <---> kotlin 1.4.31 / 1.0.0-beta04 <---> kotlin 1.4.32 <-->1.0.0-beta05
-        compose_activity_version = '1.3.0-alpha07'   // 1.3.0-alpha04 1.3.0-alpha05 1.3.0-alpha07
-        compose_appcompat_version = '1.3.0-beta01'   // 1.3.0-beta01
+        compose_version = '1.0.0-beta08'//1.0.0-alpha07
+        compose_activity_version = '1.3.0-beta01'   // 1.3.0-alpha04 1.3.0-alpha05 1.3.0-alpha07 1.3.0-alpha08
+        compose_appcompat_version = '1.3.0'   // 1.3.0-beta01  1.4.0-alpha02 //https://www.wanandroid.com/maven_pom/index?k=androidx.appcompat
         compose_constraintlayout_version = '1.0.0-alpha05'
         compose_navigation_version = '1.0.0-alpha10'//1.0.0-alpha10
         compose_lifecycle_version = '1.0.0-alpha04'//1.0.0-alpha04
         compose_accompanist = "0.8.0"
+        compose_utils_chrisbanes_coil = "0.6.2"//0.3.3.1
+        compose_utils_coil = "1.2.2"
+
+        paging_compose_version = "1.0.0-alpha09"//1.0.0-alpha02
 
         //Compose for Desktop -- JB version
         ////Ref :
