--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
 }
-
 def android_builder_version = "4.0.1"
 
 ext {
@@ -34,6 +32,10 @@ android {
                     }
                 }
             }
+    buildFeatures {
+        viewBinding true
+    }
+
     defaultConfig {
         applicationId "com.sion.itunes"
         minSdkVersion 24
@@ -52,21 +54,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    kotlinOptions {
+        jvmTarget = '1.8'
+        useIR = true
+    }
     if (ext.android_builder_main_version >= 7 || (ext.android_builder_main_version > 4 && ext.android_builder_mid_version > 1)) {
         buildFeatures {
             compose true
         }
     }
-
     composeOptions {
-        kotlinCompilerExtensionVersion "$compose_version"
-        kotlinCompilerVersion "$kotlin_version"
+        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerVersion kotlin_version
     }
 }
 
@@ -90,10 +93,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     // AndroidX
-    implementation "androidx.appcompat:appcompat:1.2.0"
+
     implementation "androidx.core:core-ktx:1.3.2"
-    implementation "com.google.android.material:material:1.4.0-alpha02"
-    implementation "androidx.activity:activity-ktx:1.2.2"
+    implementation "com.google.android.material:material:1.4.0-beta01"
+    implementation "androidx.activity:activity-ktx:1.3.0-alpha07"
     implementation "androidx.fragment:fragment-ktx:1.3.3"
     // Constraint Layout
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
@@ -110,35 +113,9 @@ dependencies {
     kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
 
-    if (android_builder_main_version < 7) {
-//        add(KotlinPluginKt.PLUGIN_CLASSPATH_CONFIGURATION_NAME, "androidx.compose.compiler:compiler:$compose_version")
-        //FIXME is hard code !!! KotlinPluginKt.PLUGIN_CLASSPATH_CONFIGURATION_NAME is right !!
-        add("kotlinCompilerPluginClasspath", "androidx.compose.compiler:compiler:$compose_version")
-    }
-
-    implementation "androidx.compose.ui:ui:$compose_version"
-    // Tooling support (Previews, etc.)
-    implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    implementation "androidx.compose.foundation:foundation:$compose_version"
-    // Material Design
-    implementation "androidx.compose.material:material:$compose_version"
-    // Material design icons
-    implementation "androidx.compose.material:material-icons-core:$compose_version"
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    // Integration with activities
-    implementation "androidx.activity:activity-compose:1.3.0-alpha03"
-    // Integration with ViewModels
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha02"
-    // Integration with observables
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
-    implementation "androidx.compose.runtime:runtime-rxjava2:$compose_version"
-
     // Kotlin Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
-
-
 
     // OkHttp
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
@@ -149,29 +126,44 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
     // Paging
-    // Ref : https://proandroiddev.com/infinite-lists-with-paging-3-in-jetpack-compose-b095533aefe6
-    // Ref : https://github.com/2307vivek/PagingCompose-Sample
     implementation "androidx.paging:paging-runtime-ktx:3.0.0"
-    implementation "androidx.paging:paging-compose:$paging_compose_version"
-
 
     // Glide
     implementation "com.github.bumptech.glide:glide:4.11.0"
     kapt "com.github.bumptech.glide:compiler:4.11.0"
 
     // Koin
-    implementation "org.koin:koin-core:2.2.1"
-    implementation "org.koin:koin-core-ext:2.2.1"
-    implementation "org.koin:koin-android:2.2.1"
-    implementation "org.koin:koin-android-scope:2.2.1"
-    implementation "org.koin:koin-android-viewmodel:2.2.1"
-    implementation "org.koin:koin-android-ext:2.2.1"
-    implementation "org.koin:koin-androidx-fragment:2.2.1"
-    implementation "org.koin:koin-androidx-scope:2.2.1"
-    implementation "org.koin:koin-androidx-viewmodel:2.2.1"
-    implementation "org.koin:koin-androidx-ext:2.2.1"
-    implementation "org.koin:koin-androidx-compose:2.2.1"
+    implementation "org.koin:koin-core:$koin_version"
+    implementation "org.koin:koin-core-ext:$koin_version"
+    // Koin_Legacy Android
+//    implementation "org.koin:koin-android:$koin_version"
+//    implementation "org.koin:koin-android-scope:$koin_version"
+//    implementation "org.koin:koin-android-viewmodel:$koin_version"
+//    implementation "org.koin:koin-android-ext:$koin_version"
+    //Koin_AndroidX
+    implementation "org.koin:koin-androidx-ext:$koin_version"
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    implementation "org.koin:koin-androidx-fragment:$koin_version"
+    implementation "org.koin:koin-androidx-compose:$koin_version"
 
     // Timber
     implementation "com.jakewharton.timber:timber:4.7.1"
+    // Compose
+    if (android_builder_main_version < 7) {
+        add("kotlinCompilerPluginClasspath", "androidx.compose.compiler:compiler:$compose_version")
+    }
+    // Compose
+    implementation "androidx.appcompat:appcompat:$compose_appcompat_version"
+    implementation "androidx.activity:activity-compose:$compose_activity_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+//    implementation group: 'com.google.android.material', name: 'compose-theme-adapter', version: '1.0.0-beta07'
+
+    implementation "dev.chrisbanes.accompanist:accompanist-coil:$compose_utils_chrisbanes_coil"
+////    implementation "io.coil-kt:coil:$compose_utils_coil"
+//    // Paging Compose
+    implementation "androidx.paging:paging-compose:$paging_compose_version"
 }
