--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 buildscript {
     ext {
         android_gradle_plugin_version = '4.1.2'
-        kotlin_version = "1.4.32"
-
+        kotlin_version = "1.5.10"
+        koin_version = "2.2.2"
         //Jetpack Compose
         //ComposeOptions.kotlinCompilerVersion is deprecated. Compose now uses the kotlin compiler defined in your buildscript.
 //        android_compose_appcompat_version = '1.3.0-beta01'
