--- a/build.gradle
+++ b/build.gradle
@@ -2,23 +2,23 @@
 buildscript {
     ext {
         android_gradle_plugin_version = '4.1.2'
-        kotlin_version = "1.5.10"
+        kotlin_version = "1.4.32"
         koin_version = "2.2.2"
         //Jetpack Compose
         //ComposeOptions.kotlinCompilerVersion is deprecated. Compose now uses the kotlin compiler defined in your buildscript.
 //        android_compose_appcompat_version = '1.3.0-beta01'
 //        android_compose_activity_version = '1.3.0-alpha02' // 1.3.0-alpha04 1.3.0-alpha05 1.3.0-alpha07
-        compose_version = '1.0.0-beta08'//1.0.0-alpha07
-        compose_activity_version = '1.3.0-beta01'   // 1.3.0-alpha04 1.3.0-alpha05 1.3.0-alpha07 1.3.0-alpha08
+        compose_version = '1.0.0-beta06'//1.0.0-alpha07  /1.0.0-beta08
+        compose_activity_version = '1.3.0-alpha07'   // 1.3.0-alpha04 1.3.0-alpha05 1.3.0-alpha07 1.3.0-alpha08 1.3.0-beta01
         compose_appcompat_version = '1.3.0'   // 1.3.0-beta01  1.4.0-alpha02 //https://www.wanandroid.com/maven_pom/index?k=androidx.appcompat
-        compose_constraintlayout_version = '1.0.0-alpha05'
+        compose_constraintlayout_version = '1.0.0-alpha06'//1.0.0-alpha07
         compose_navigation_version = '1.0.0-alpha10'//1.0.0-alpha10
         compose_lifecycle_version = '1.0.0-alpha04'//1.0.0-alpha04
         compose_accompanist = "0.8.0"
         compose_utils_chrisbanes_coil = "0.6.2"//0.3.3.1
         compose_utils_coil = "1.2.2"
 
-        paging_compose_version = "1.0.0-alpha09"//1.0.0-alpha02
+        paging_compose_version = "1.0.0-alpha08"//1.0.0-alpha09
 
         //Compose for Desktop -- JB version
         ////Ref :
@@ -41,9 +41,6 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
-        maven {
-            url = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
-        }
         //JB_Compose
         maven {
             url = "https://maven.pkg.jetbrains.space/public/p/compose/dev"
@@ -60,6 +57,9 @@ buildscript {
             url = "https://dl.bintray.com/kotlin/kotlin-eap"
         }
         gradlePluginPortal()
+        maven {
+            url = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
+        }
         jcenter()
     }
     dependencies {
@@ -83,9 +83,6 @@ allprojects {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
-        maven {
-            url = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
-        }
         //JB_Compose
         maven {
             url = "https://maven.pkg.jetbrains.space/public/p/compose/dev"
@@ -102,6 +99,9 @@ allprojects {
             url = "https://dl.bintray.com/kotlin/kotlin-eap"
         }
         gradlePluginPortal()
+        maven {
+            url = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
+        }
         jcenter()
     }
 
@@ -117,7 +117,6 @@ allprojects {
             allWarningsAsErrors = false
         }
     }
-
 }
 
 task clean(type: Delete) {
